Fix z-index of chevron

--- a/css/MobileStyle.css
+++ b/css/MobileStyle.css
@@ -73,7 +73,7 @@ body {
   top: 0;
   left: 100%;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -311,7 +311,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  z-index: 101;
+  z-index: 100;
 }
 
 /* Hero section end */
@@ -1126,8 +1126,7 @@ form button {
     justify-content: space-evenly;
     align-items: center;
     margin-top: 100px;
-    background-image:
-      url("../images/illustration-about-me-2-desktop@2x.png"),
+    background-image: url("../images/illustration-about-me-2-desktop@2x.png"),
       url("../images/Frame@2x.png");
     background-repeat: no-repeat;
     background-size: 15vw, 16vw;
@@ -1172,8 +1171,7 @@ form button {
   /* Contact form start */
 
   body #form-section {
-    background-image:
-      url("../images/Frame@contact.png"),
+    background-image: url("../images/Frame@contact.png"),
       url("../images/illustration-2-contact-form-desktop@2x.png"),
       url("../images/Frame@contact-2.png");
     background-repeat: no-repeat;
